[package]
name = "mnt"
version = "0.1.0"
edition = "2021"
[dependencies]
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "folding-schemes", features = [
    "light-test",
]}
ark-bn254 = { version = "^0.4.0", features=["r1cs"] }
ark-ff = { version = "^0.4.0", default-features = false, features = ["parallel", "asm"] }
ark-poly = { version = "^0.4.0", default-features = false, features = ["parallel"] }
ark-std = { version = "^0.4.0", default-features = false, features = ["parallel"] }
ark-grumpkin = { version = "0.4.0", features=["r1cs"] }
ark-groth16 = { version = "^0.4.0", default-features = false, features = ["parallel"]}
ark-r1cs-std = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-relations = { version = "^0.4.0", default-features = false }
solidity-verifiers = {git = "https://github.com/privacy-scaling-explorations/sonobe", package = "solidity-verifiers" }
rand = "0.8.5"
ark-mnt6-298 = { version = "0.4.0", features = ["r1cs"] }
ark-mnt4-298 = { version = "0.4.0", features = ["r1cs"] }
[patch.crates-io]
ark-grumpkin = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick" }
ark-bn254 = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick" }
ark-r1cs-std = { git = "https://github.com/winderica/r1cs-std", branch = "cherry-pick" }